Problem 2.1 and 2.2 done: forward and backward algorithm

--- a/lab4.ipynb
+++ b/lab4.ipynb
@@ -57,14 +57,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OeAGM6ajF7or",
-        "outputId": "2c33ad90-6a2a-43f3-859c-bbc36995d1c2"
+        "outputId": "dbfde106-cddf-4ead-a0cd-a641a9f78547"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/gdrive/; to attempt to forcibly remount, call drive.mount(\"/content/gdrive/\", force_remount=True).\n"
+            "Mounted at /content/gdrive/\n"
           ]
         }
       ],
@@ -258,7 +258,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7jj9ADkwFC9d",
-        "outputId": "fa44b9ee-a5dd-4d0f-9c29-9d4140672b92"
+        "outputId": "9f98e8d0-5077-4302-a003-9fbe306e2b5f"
       },
       "outputs": [
         {
@@ -299,14 +299,14 @@
           "solution": false,
           "task": false
         },
-        "outputId": "d3868883-6ee0-4b55-b144-098450ba528a"
+        "outputId": "98cc53c7-dfea-4033-e9dc-634ac27c7173"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "MoSeq pynwb.base.ProcessingModule at 0x139660705718880\n",
+              "MoSeq pynwb.base.ProcessingModule at 0x135976296480240\n",
               "Fields:\n",
               "  data_interfaces: {\n",
               "    Images <class 'pynwb.behavior.BehavioralTimeSeries'>,\n",
@@ -386,14 +386,14 @@
           "solution": false,
           "task": false
         },
-        "outputId": "1835e21c-9ba8-4394-b139-d70b698ee887"
+        "outputId": "667e705f-f14c-4b37-c314-a2531797fc9b"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "Images pynwb.behavior.BehavioralTimeSeries at 0x139660705725024\n",
+              "Images pynwb.behavior.BehavioralTimeSeries at 0x135976296476256\n",
               "Fields:\n",
               "  time_series: {\n",
               "    frames <class 'pynwb.image.ImageSeries'>,\n",
@@ -470,14 +470,14 @@
           "solution": false,
           "task": false
         },
-        "outputId": "e3dce071-e86d-46f3-c282-acf153a2f45f"
+        "outputId": "255a6982-d143-49c9-a0e4-917790050c8a"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "frames pynwb.image.ImageSeries at 0x139660705725600\n",
+              "frames pynwb.image.ImageSeries at 0x135976296476832\n",
               "Fields:\n",
               "  comments: no comments\n",
               "  conversion: 1.0\n",
@@ -486,7 +486,7 @@
               "  interval: 1\n",
               "  offset: 0.0\n",
               "  resolution: -1.0\n",
-              "  timestamps: angle pynwb.base.TimeSeries at 0x139660705265792\n",
+              "  timestamps: angle pynwb.base.TimeSeries at 0x135976296477264\n",
               "Fields:\n",
               "  comments: no comments\n",
               "  conversion: 1.0\n",
@@ -628,7 +628,7 @@
           "solution": false,
           "task": false
         },
-        "outputId": "7d321b26-f509-4d71-d959-c1e5165bc865"
+        "outputId": "e0cfd392-04bc-41ef-f290-0a5bae9c1d89"
       },
       "outputs": [
         {
@@ -692,7 +692,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -793,7 +793,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "deletable": false,
         "editable": false,
@@ -827,7 +827,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1001,7 +1001,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "deletable": false,
         "editable": false,
@@ -1040,7 +1040,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "deletable": false,
         "id": "BD5KZGrKFC9f",
@@ -1094,7 +1094,12 @@
         "        # Step 3.1: get the likelihood of observation at the current time step\n",
         "        # No more than 4 lines, similar as step 1\n",
         "        # YOUR CODE HERE\n",
-        "        raise NotImplementedError()\n",
+        "        log_ell_t = log_likes[t]\n",
+        "        max_log_ell_t = torch.max(log_ell_t)\n",
+        "        log_ell_t_centered = log_ell_t - max_log_ell_t\n",
+        "        ell_t = torch.exp(log_ell_t_centered)\n",
+        "\n",
+        "        # raise NotImplementedError()\n",
         "\n",
         "        alpha_prev = alphas[t - 1]\n",
         "\n",
@@ -1102,19 +1107,24 @@
         "        # by aggregating the contributions from all possible previous state\n",
         "        # no more than 1 line, using torch.matmul(...)\n",
         "        # YOUR CODE HERE\n",
-        "        raise NotImplementedError()\n",
+        "        alpha_t_unnormalized = torch.matmul(alpha_t, transition_matrix) * ell_t\n",
+        "        # raise NotImplementedError()\n",
         "\n",
         "        # Step 3.3: get the normaized alpha values for the current time step\n",
         "        # no more than 5 lines, similar as step 2\n",
         "        # YOUR CODE HERE\n",
-        "        raise NotImplementedError()\n",
+        "        A_t = torch.sum(alpha_t_unnormalized)\n",
+        "        alpha_t, _ = normalize(alpha_t_unnormalized)\n",
+        "        alphas[t] = alpha_t\n",
+        "        marginal_ll += torch.log(A_t) + max_log_ell_t  # Update marginal log-likelihood\n",
+        "        # raise NotImplementedError()\n",
         "\n",
         "    return alphas, marginal_ll"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "deletable": false,
         "editable": false,
@@ -1129,9 +1139,22 @@
           "schema_version": 3,
           "solution": false,
           "task": false
-        }
+        },
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0ac18052-efe7-47d2-b3ad-e0dde53ef87c"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "pass\n",
+            "pass\n"
+          ]
+        }
+      ],
       "source": [
         "# test your implemented forward pass\n",
         "def test_forward_pass(num_timesteps=100, num_states=10, offset=0):\n",
@@ -1181,7 +1204,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
         "deletable": false,
         "id": "-eh8OVMxFC9g",
@@ -1226,12 +1249,24 @@
         "        # Step 2.2: Condition on emission at time t, being careful not to overflow.\n",
         "        # no more than 4 lines, using normalize(...)\n",
         "        # YOUR CODE HERE\n",
-        "        raise NotImplementedError()\n",
+        "        log_ell_t = log_likes[t]  # Get log likelihoods at time t\n",
+        "        max_log_ell_t = torch.max(log_ell_t)  # Max log likelihood to avoid overflow\n",
+        "        log_ell_t_centered = log_ell_t - max_log_ell_t  # Center log-likelihoods\n",
+        "        ell_t = torch.exp(log_ell_t_centered)  # Exponentiate to get actual likelihoods\n",
+        "        # raise NotImplementedError()\n",
+        "\n",
+        "        # Update backward probabilities conditioned on emissions (normalize for stability)\n",
+        "        beta_unnormalized = backward_pred_probs * ell_t  # Condition on the emission\n",
+        "        beta_normalized, _ = normalize(beta_unnormalized)  # Normalize to avoid underflow\n",
+        "\n",
         "\n",
         "        # Step 2.3: Predict the next state, being careful not to overflow.\n",
         "        # no more than 2 lines, using torch.matmul(...) and normalize(...)\n",
         "        # YOUR CODE HERE\n",
-        "        raise NotImplementedError()\n",
+        "        backward_pred_probs = torch.matmul(transition_matrix, beta_normalized)\n",
+        "        backward_pred_probs, _ = normalize(backward_pred_probs)  # Normalize prediction step\n",
+        "\n",
+        "        # raise NotImplementedError()\n",
         "\n",
         "    return betas\n"
       ]
