The E-stem of EM algorithm implemented.

--- a/lab4.ipynb
+++ b/lab4.ipynb
@@ -57,7 +57,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OeAGM6ajF7or",
-        "outputId": "dbfde106-cddf-4ead-a0cd-a641a9f78547"
+        "outputId": "2aac30ef-229d-4a14-da11-daa494ba79d0"
       },
       "outputs": [
         {
@@ -258,7 +258,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7jj9ADkwFC9d",
-        "outputId": "9f98e8d0-5077-4302-a003-9fbe306e2b5f"
+        "outputId": "864a793a-865a-4d26-9179-a4a69eff5278"
       },
       "outputs": [
         {
@@ -299,14 +299,14 @@
           "solution": false,
           "task": false
         },
-        "outputId": "98cc53c7-dfea-4033-e9dc-634ac27c7173"
+        "outputId": "8663451c-8596-4ea7-96da-7a0aa2b1a888"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "MoSeq pynwb.base.ProcessingModule at 0x135976296480240\n",
+              "MoSeq pynwb.base.ProcessingModule at 0x134950588123264\n",
               "Fields:\n",
               "  data_interfaces: {\n",
               "    Images <class 'pynwb.behavior.BehavioralTimeSeries'>,\n",
@@ -386,14 +386,14 @@
           "solution": false,
           "task": false
         },
-        "outputId": "667e705f-f14c-4b37-c314-a2531797fc9b"
+        "outputId": "1cd51c77-dfe8-4911-9200-b3ea7cc85910"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "Images pynwb.behavior.BehavioralTimeSeries at 0x135976296476256\n",
+              "Images pynwb.behavior.BehavioralTimeSeries at 0x134950588129408\n",
               "Fields:\n",
               "  time_series: {\n",
               "    frames <class 'pynwb.image.ImageSeries'>,\n",
@@ -470,14 +470,14 @@
           "solution": false,
           "task": false
         },
-        "outputId": "255a6982-d143-49c9-a0e4-917790050c8a"
+        "outputId": "9a748300-d363-4573-d55f-46688ee188c1"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "frames pynwb.image.ImageSeries at 0x135976296476832\n",
+              "frames pynwb.image.ImageSeries at 0x134950588129984\n",
               "Fields:\n",
               "  comments: no comments\n",
               "  conversion: 1.0\n",
@@ -486,7 +486,7 @@
               "  interval: 1\n",
               "  offset: 0.0\n",
               "  resolution: -1.0\n",
-              "  timestamps: angle pynwb.base.TimeSeries at 0x135976296477264\n",
+              "  timestamps: angle pynwb.base.TimeSeries at 0x134950588130416\n",
               "Fields:\n",
               "  comments: no comments\n",
               "  conversion: 1.0\n",
@@ -628,7 +628,7 @@
           "solution": false,
           "task": false
         },
-        "outputId": "e0cfd392-04bc-41ef-f290-0a5bae9c1d89"
+        "outputId": "b196a5a9-d877-4b10-c655-810a0262c5da"
       },
       "outputs": [
         {
@@ -692,7 +692,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -710,7 +710,7 @@
           "solution": false,
           "task": false
         },
-        "outputId": "bc0e0a60-9ce3-4c24-8bc8-5a751990c589"
+        "outputId": "93fdebc4-f4c9-40a0-bd7b-0855a5c3c5b6"
       },
       "outputs": [
         {
@@ -721,7 +721,7 @@
             "  warn(\"Ignoring cached namespace '%s' version %s because version %s is already loaded.\"\n",
             "/usr/local/lib/python3.10/dist-packages/hdmf/spec/namespace.py:535: UserWarning: Ignoring cached namespace 'core' version 2.2.5 because version 2.7.0 is already loaded.\n",
             "  warn(\"Ignoring cached namespace '%s' version %s because version %s is already loaded.\"\n",
-            "100%|██████████| 8/8 [00:20<00:00,  2.61s/it]\n"
+            "100%|██████████| 8/8 [00:18<00:00,  2.37s/it]\n"
           ]
         }
       ],
@@ -793,7 +793,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "deletable": false,
         "editable": false,
@@ -827,7 +827,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -846,7 +846,7 @@
           "solution": false,
           "task": false
         },
-        "outputId": "9cfb148f-4381-4271-d051-2a1f7d58d40f"
+        "outputId": "9df92ef7-a9e0-4761-f840-19234b59b830"
       },
       "outputs": [
         {
@@ -1001,7 +1001,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 15,
       "metadata": {
         "deletable": false,
         "editable": false,
@@ -1040,7 +1040,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 16,
       "metadata": {
         "deletable": false,
         "id": "BD5KZGrKFC9f",
@@ -1124,7 +1124,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 17,
       "metadata": {
         "deletable": false,
         "editable": false,
@@ -1143,7 +1143,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0ac18052-efe7-47d2-b3ad-e0dde53ef87c"
+        "outputId": "c5c19016-aa80-40b0-c0a7-ddbd1d6d045a"
       },
       "outputs": [
         {
@@ -1204,7 +1204,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 18,
       "metadata": {
         "deletable": false,
         "id": "-eh8OVMxFC9g",
@@ -1295,7 +1295,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
         "deletable": false,
         "id": "g_pYbWx0FC9g",
@@ -1339,13 +1339,17 @@
         "    # Step 2: Run backward pass to compute betas\n",
         "    # no more than one line, using predefined backward_pass()\n",
         "    # YOUR CODE HERE\n",
-        "    raise NotImplementedError()\n",
+        "    betas = backward_pass(transition_matrix, log_likes)\n",
+        "\n",
+        "    #raise NotImplementedError()\n",
         "\n",
         "    # Step 3: Combine forward and backward messages to compute posterior probability\n",
         "    # no more than three lines, remember to do normalization\n",
-        "    posterior_prob = None\n",
+        "    posterior_prob = alphas * betas\n",
+        "    posterior_prob, _ = normalize(posterior_prob, axis=1)\n",
+        "\n",
         "    # YOUR CODE HERE\n",
-        "    raise NotImplementedError()\n",
+        "    # raise NotImplementedError()\n",
         "\n",
         "    # Package the results into a dictionary summarizing the posterior\n",
         "    posterior = dict(posterior_prob=posterior_prob,\n",
@@ -1356,7 +1360,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
         "deletable": false,
         "editable": false,
@@ -1371,9 +1375,22 @@
           "schema_version": 3,
           "solution": false,
           "task": false
-        }
+        },
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5d873f89-1545-4e94-f2f5-a9a06160fee4"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "pass\n",
+            "pass\n"
+          ]
+        }
+      ],
       "source": [
         "# test your own implementation\n",
         "def test_E_step(num_timesteps=100, num_states=10, offset=0):\n",
