Problem 3.1, 3.2, 3.3 drafted. Have shape issue.

--- a/lab4.ipynb
+++ b/lab4.ipynb
@@ -57,7 +57,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OeAGM6ajF7or",
-        "outputId": "2aac30ef-229d-4a14-da11-daa494ba79d0"
+        "outputId": "ec75ca61-2c2b-449f-f685-56b2f8ce5591"
       },
       "outputs": [
         {
@@ -258,7 +258,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7jj9ADkwFC9d",
-        "outputId": "864a793a-865a-4d26-9179-a4a69eff5278"
+        "outputId": "ee34d157-48f3-4a6b-a62d-324f792e831e"
       },
       "outputs": [
         {
@@ -299,14 +299,14 @@
           "solution": false,
           "task": false
         },
-        "outputId": "8663451c-8596-4ea7-96da-7a0aa2b1a888"
+        "outputId": "2eb56674-78f4-4536-bca6-a4df97d48377"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "MoSeq pynwb.base.ProcessingModule at 0x134950588123264\n",
+              "MoSeq pynwb.base.ProcessingModule at 0x136794657556416\n",
               "Fields:\n",
               "  data_interfaces: {\n",
               "    Images <class 'pynwb.behavior.BehavioralTimeSeries'>,\n",
@@ -386,14 +386,14 @@
           "solution": false,
           "task": false
         },
-        "outputId": "1cd51c77-dfe8-4911-9200-b3ea7cc85910"
+        "outputId": "2a5f20e7-0807-4ca6-f79f-ebc60f863e02"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "Images pynwb.behavior.BehavioralTimeSeries at 0x134950588129408\n",
+              "Images pynwb.behavior.BehavioralTimeSeries at 0x136794657562560\n",
               "Fields:\n",
               "  time_series: {\n",
               "    frames <class 'pynwb.image.ImageSeries'>,\n",
@@ -470,14 +470,14 @@
           "solution": false,
           "task": false
         },
-        "outputId": "9a748300-d363-4573-d55f-46688ee188c1"
+        "outputId": "e8aab459-180d-4403-91cf-45e1f4f69252"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "frames pynwb.image.ImageSeries at 0x134950588129984\n",
+              "frames pynwb.image.ImageSeries at 0x136794657563136\n",
               "Fields:\n",
               "  comments: no comments\n",
               "  conversion: 1.0\n",
@@ -486,7 +486,7 @@
               "  interval: 1\n",
               "  offset: 0.0\n",
               "  resolution: -1.0\n",
-              "  timestamps: angle pynwb.base.TimeSeries at 0x134950588130416\n",
+              "  timestamps: angle pynwb.base.TimeSeries at 0x136794657563568\n",
               "Fields:\n",
               "  comments: no comments\n",
               "  conversion: 1.0\n",
@@ -628,7 +628,7 @@
           "solution": false,
           "task": false
         },
-        "outputId": "b196a5a9-d877-4b10-c655-810a0262c5da"
+        "outputId": "7601056d-b612-448b-8df1-d4d80758c561"
       },
       "outputs": [
         {
@@ -710,7 +710,7 @@
           "solution": false,
           "task": false
         },
-        "outputId": "93fdebc4-f4c9-40a0-bd7b-0855a5c3c5b6"
+        "outputId": "883dc3f4-e725-4f69-9742-856d797f4039"
       },
       "outputs": [
         {
@@ -721,7 +721,7 @@
             "  warn(\"Ignoring cached namespace '%s' version %s because version %s is already loaded.\"\n",
             "/usr/local/lib/python3.10/dist-packages/hdmf/spec/namespace.py:535: UserWarning: Ignoring cached namespace 'core' version 2.2.5 because version 2.7.0 is already loaded.\n",
             "  warn(\"Ignoring cached namespace '%s' version %s because version %s is already loaded.\"\n",
-            "100%|██████████| 8/8 [00:18<00:00,  2.37s/it]\n"
+            "100%|██████████| 8/8 [00:21<00:00,  2.64s/it]\n"
           ]
         }
       ],
@@ -846,7 +846,7 @@
           "solution": false,
           "task": false
         },
-        "outputId": "9df92ef7-a9e0-4761-f840-19234b59b830"
+        "outputId": "48cf7c81-7b7e-4bc2-99aa-8af98d4f996e"
       },
       "outputs": [
         {
@@ -1143,7 +1143,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c5c19016-aa80-40b0-c0a7-ddbd1d6d045a"
+        "outputId": "c80cf8f2-cb9d-4cf0-b439-509bff268ba3"
       },
       "outputs": [
         {
@@ -1379,7 +1379,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5d873f89-1545-4e94-f2f5-a9a06160fee4"
+        "outputId": "bace91af-c79b-4504-e441-a7008a4ccfc9"
       },
       "outputs": [
         {
@@ -1553,7 +1553,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
         "deletable": false,
         "editable": false,
@@ -1593,7 +1593,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
         "deletable": false,
         "editable": false,
@@ -1617,7 +1617,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 29,
       "metadata": {
         "deletable": false,
         "id": "74arFzCbUncd",
@@ -1668,20 +1668,23 @@
         "        # step1: N for each state\n",
         "        N = None\n",
         "        # no more than one line, using tensor.sum(...)\n",
+        "        N = torch.sum(q, dim=0)\n",
         "        # YOUR CODE HERE\n",
-        "        raise NotImplementedError()\n",
+        "        # raise NotImplementedError()\n",
         "\n",
         "        # step2: t1 for each state\n",
         "        t1s = None\n",
         "        # no more than one line, using torch.einsum(...)\n",
+        "        t1s = torch.einsum('tk,ti->t', q, t0)\n",
         "        # YOUR CODE HERE\n",
-        "        raise NotImplementedError()\n",
+        "        # raise NotImplementedError()\n",
         "\n",
         "        # step3: t1 for each state\n",
         "        t2s = None\n",
         "        # no more than one line, using torch.einsum(...)\n",
+        "        t2s = torch.einsum('tk,tij->t', q, t1)\n",
         "        # YOUR CODE HERE\n",
-        "        raise NotImplementedError()\n",
+        "        # raise NotImplementedError()\n",
         "\n",
         "        stats = (N, t1s, t2s)\n",
         "        return T, stats\n",
@@ -1727,7 +1730,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 38,
       "metadata": {
         "deletable": false,
         "id": "RYghrMlkYRGb",
@@ -1769,7 +1772,9 @@
         "    # no more than one line\n",
         "    means = None\n",
         "    # YOUR CODE HERE\n",
-        "    raise NotImplementedError()\n",
+        "    Ns = Ns.reshape(-1, 1)  # Reshape to (num_states, 1) for broadcasting\n",
+        "    means = t1s / Ns\n",
+        "    # raise NotImplementedError()\n",
         "\n",
         "    # Initialize covariance matrices\n",
         "    covs = torch.zeros(K, D, D)\n",
@@ -1782,7 +1787,10 @@
         "            # no more than four lines, remember to use torch.outer(...) and torch.eye(...)\n",
         "            cov_k = None\n",
         "            # YOUR CODE HERE\n",
-        "            raise NotImplementedError()\n",
+        "            t2s_k_reshaped = t2s[k].reshape(D, D)\n",
+        "            cov_k = t2s_k_reshaped / Ns[k] - torch.outer(means[k], means[k]) + 1e-4 * torch.eye(D)\n",
+        "\n",
+        "            # raise NotImplementedError()\n",
         "\n",
         "            covs[k] = cov_k\n",
         "        else:\n",
@@ -1819,57 +1827,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "deletable": false,
-        "editable": false,
-        "id": "hPEV1zKgbyZX",
-        "nbgrader": {
-          "cell_type": "code",
-          "checksum": "7d3c8ccfbe8b7bc6c15bbfa7ad1ce3a6",
-          "grade": false,
-          "grade_id": "cell-c9cadf05ef0ab76e",
-          "locked": true,
-          "schema_version": 3,
-          "solution": false,
-          "task": false
-        }
-      },
-      "outputs": [],
-      "source": [
-        "def get_log_likelihoods(num_states, means, covs, data):\n",
-        "    \"\"\"\n",
-        "    Compute the matrix of log likelihoods of data for each state.\n",
-        "\n",
-        "    Parameters\n",
-        "    ----------\n",
-        "    num_states: a scaler indicating the number of states\n",
-        "    means: a KxD array of means for each state\n",
-        "    covs: a KxDxD array of covariance matrices for each state\n",
-        "    data: a dictionary with multiple keys, including \"data\", the TxD array\n",
-        "        of observations.\n",
-        "\n",
-        "    Returns\n",
-        "    -------\n",
-        "    log_likes: a TxK array of log likelihoods for each datapoint and\n",
-        "        discrete state.\n",
-        "    \"\"\"\n",
-        "    x = data[\"data\"]\n",
-        "    T = x.shape[0]\n",
-        "    K = num_states\n",
-        "    log_likes = torch.zeros(T, K)\n",
-        "\n",
-        "    # Loop over each state to compute the log likelihoods\n",
-        "    for k in range(K):\n",
-        "        mvn = torch.distributions.MultivariateNormal(means[k], covs[k])\n",
-        "        log_likes[:, k] = mvn.log_prob(x)\n",
-        "\n",
-        "    return log_likes"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 39,
       "metadata": {
         "deletable": false,
         "id": "NUGDG5ARcmCq",
@@ -1951,13 +1909,19 @@
         "        # M step: update the parameters of the emission part in ELBO\n",
         "        # one line code\n",
         "        # YOUR CODE HERE\n",
-        "        raise NotImplementedError()\n",
+        "        means, covs = M_step(num_states, data_dim, stats)\n",
+        "\n",
+        "        # raise NotImplementedError()\n",
         "\n",
         "        # E step: compute the posterior for each data dictionary in the dataset\n",
         "        # using for loop to iterate over all training sampels\n",
         "        # no more than 5 lines, using get_log_likelihoods, E_step\n",
         "        # YOUR CODE HERE\n",
-        "        raise NotImplementedError()\n",
+        "        for data in train_dataset:\n",
+        "            log_likes = get_log_likelihoods(num_states, means, covs, data)\n",
+        "            posteriors.append(E_step(initial_dist, transition_matrix, log_likes))\n",
+        "\n",
+        "        #raise NotImplementedError()\n",
         "\n",
         "        # Compute the tuple of N_k, t_{k,1}, t_{k,2} under the new posteriors\n",
         "        stats = compute_expected_suff_stats(train_dataset, posteriors)\n",
@@ -1971,7 +1935,12 @@
         "        # no more than 5 lines, using get_log_likelihoods, E_step\n",
         "        test_posteriors = None\n",
         "        # YOUR CODE HERE\n",
-        "        raise NotImplementedError()\n",
+        "        test_posteriors = []\n",
+        "        for data in test_dataset:\n",
+        "            log_likes = get_log_likelihoods(num_states, means, covs, data)\n",
+        "            test_posteriors.append(E_step(initial_dist, transition_matrix,\n",
+        "                                          log_likes))\n",
+        "        # raise NotImplementedError()\n",
         "\n",
         "        # Store the average test likelihood\n",
         "        avg_test_ll = sum([p[\"marginal_ll\"] for p in test_posteriors]) / num_test\n",
@@ -1984,7 +1953,57 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 40,
+      "metadata": {
+        "deletable": false,
+        "editable": false,
+        "id": "hPEV1zKgbyZX",
+        "nbgrader": {
+          "cell_type": "code",
+          "checksum": "7d3c8ccfbe8b7bc6c15bbfa7ad1ce3a6",
+          "grade": false,
+          "grade_id": "cell-c9cadf05ef0ab76e",
+          "locked": true,
+          "schema_version": 3,
+          "solution": false,
+          "task": false
+        }
+      },
+      "outputs": [],
+      "source": [
+        "def get_log_likelihoods(num_states, means, covs, data):\n",
+        "    \"\"\"\n",
+        "    Compute the matrix of log likelihoods of data for each state.\n",
+        "\n",
+        "    Parameters\n",
+        "    ----------\n",
+        "    num_states: a scaler indicating the number of states\n",
+        "    means: a KxD array of means for each state\n",
+        "    covs: a KxDxD array of covariance matrices for each state\n",
+        "    data: a dictionary with multiple keys, including \"data\", the TxD array\n",
+        "        of observations.\n",
+        "\n",
+        "    Returns\n",
+        "    -------\n",
+        "    log_likes: a TxK array of log likelihoods for each datapoint and\n",
+        "        discrete state.\n",
+        "    \"\"\"\n",
+        "    x = data[\"data\"]\n",
+        "    T = x.shape[0]\n",
+        "    K = num_states\n",
+        "    log_likes = torch.zeros(T, K)\n",
+        "\n",
+        "    # Loop over each state to compute the log likelihoods\n",
+        "    for k in range(K):\n",
+        "        mvn = torch.distributions.MultivariateNormal(means[k], covs[k])\n",
+        "        log_likes[:, k] = mvn.log_prob(x)\n",
+        "\n",
+        "    return log_likes"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 41,
       "metadata": {
         "deletable": false,
         "editable": false,
@@ -1998,9 +2017,35 @@
           "schema_version": 3,
           "solution": false,
           "task": false
-        }
+        },
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 373
+        },
+        "outputId": "cbb3e068-0827-4fe3-ee79-924a52babf29"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "  0%|          | 0/40 [00:00<?, ?it/s]\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "RuntimeError",
+          "evalue": "shape '[10, 10]' is invalid for input of size 1",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-41-b612161c3bb3>\u001b[0m in \u001b[0;36m<cell line: 7>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# Fit it! It will take about 11 minutes.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mtrain_lls\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_lls\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_posteriors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_posteriors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m=\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m     fit(train_dataset[:1],\n\u001b[0m\u001b[1;32m      8\u001b[0m             \u001b[0mtest_dataset\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m             \u001b[0minitial_dist\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-39-26630380d3c0>\u001b[0m in \u001b[0;36mfit\u001b[0;34m(train_dataset, test_dataset, initial_dist, transition_matrix, num_states, data_dim, seed, num_iters)\u001b[0m\n\u001b[1;32m     64\u001b[0m         \u001b[0;31m# one line code\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     65\u001b[0m         \u001b[0;31m# YOUR CODE HERE\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 66\u001b[0;31m         \u001b[0mmeans\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcovs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mM_step\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnum_states\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata_dim\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstats\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     67\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     68\u001b[0m         \u001b[0;31m# raise NotImplementedError()\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-38-c4df568da5c3>\u001b[0m in \u001b[0;36mM_step\u001b[0;34m(num_states, data_dim, stats)\u001b[0m\n\u001b[1;32m     39\u001b[0m             \u001b[0mcov_k\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     40\u001b[0m             \u001b[0;31m# YOUR CODE HERE\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 41\u001b[0;31m             \u001b[0mt2s_k_reshaped\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mt2s\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mD\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mD\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     42\u001b[0m             \u001b[0mcov_k\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mt2s_k_reshaped\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mNs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mouter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmeans\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmeans\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1e-4\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0meye\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mD\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     43\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mRuntimeError\u001b[0m: shape '[10, 10]' is invalid for input of size 1"
+          ]
+        }
+      ],
       "source": [
         "num_states = 50\n",
         "initial_dist = torch.ones(num_states) / num_states\n",
